[package]
name = "sumbu-peradaban"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
async-graphql = { version = "7.2", features = ["uuid", "chrono"] }
async-graphql-axum = "7.2"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json", "migrate", "bigdecimal"] }
neo4rs = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
bigdecimal = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
argon2 = "0.5.3"
jsonwebtoken = "9.3.0"
